# ThermostatUi

./: CMakeLists.txt  README.md  main.cpp  main.qml  qml.qrc
Controllers/: systemcontroller.cpp  systemcontroller.h
UI/HomeScreen/: HeatSelectDialog.qml  HomeScreen.qml  TemperatureControlSlider.qml
UI/SettingScreen/: AboutPage.qml  SettingMainMenu.qml  SettingScreen.qml
